Fixed spacing for mobile between elements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,7 +122,7 @@ iframe {
   .title {
     font-size: 10vw;
     line-height: 10.5vw;
-    margin-bottom: 3.3vh;
+    margin-bottom: 30px;
     text-align: center;
     width: 100%;
   }
@@ -132,7 +132,7 @@ iframe {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-column-gap: 1.3vh;
     grid-row-gap: 1.8vh;
-    margin-bottom: 3.3vh;
+    margin-bottom: 30px;
   }
   .nav-btn {
     border-radius: 6vw;
